<resources>
    <string name="app_name">Login</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="remember_pass">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="register_now">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_password_again">请再次输入密码</string>
    <string name="password_inconsistent">密码前后输入不一致，请重新输入密码</string>
    <string name="find_passowrd">找回密码</string>
    <string name="original_password">原始密码为:</string>
</resources>
