<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.goertek.login.findPassword.FindPasswordActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:maxLines="2"
        android:textSize="30sp"
        android:background="@drawable/edit"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/btn_find_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_passowrd"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:background="@mipmap/btn_upload_pressed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/original_password"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_show_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:background="@color/white"/>
    </LinearLayout>


</LinearLayout>
