<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.goertek.login.login.LoginActivity"
    android:background="@mipmap/login_bg">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@mipmap/yxs"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:maxLines="2"
        android:textSize="25sp"
        android:background="@drawable/edit"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:maxLines="2"
        android:textSize="25sp"
        android:background="@drawable/edit"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/cb_remember_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_pass"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_login"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:paddingStart="120dp"
        android:paddingEnd="120dp"
        android:background="@mipmap/btn_upload_pressed"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textSize="20sp"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/forget_password"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="第三方登录"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_qqlogin"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@mipmap/umeng_socialize_qq"
                android:layout_marginStart="50dp"/>

             <Button
                 android:id="@+id/btn_weixinlogin"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@mipmap/umeng_socialize_wechat"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"/>

             <Button
                 android:id="@+id/btn_sinaweibo_login"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:background="@mipmap/umeng_socialize_sina"
                 android:layout_marginEnd="100dp" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
