<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="com.goertek.login.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_guild_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="13dp"
            android:src="@mipmap/guild_back">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="13dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:maxLines="2"
            android:textSize="25sp"
            android:background="@drawable/edit"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/et_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:maxLines="2"
            android:textSize="25sp"
            android:background="@drawable/edit"
            android:layout_margin="10dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_enter_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_again"
            android:maxLines="2"
            android:textSize="25sp"
            android:background="@drawable/edit"
            android:layout_margin="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:background="@mipmap/btn_upload_pressed"/>
    </LinearLayout>

</LinearLayout>
